# xam-messenger

./: .eslintrc.json  .gitignore  DISCOVERY.md  Dockerfile.linux  LICENSE  README.md  babel.config.cjs  build-linux.sh  eslint.config.js  jest.integration.config.cjs  jest.integration.config.js  package-lock.json  package.json  playwright.config.ts  tauri.conf.json  tsconfig.e2e.json
.github/workflows/: build-all.yml  build-linux.yml  build-macos.yml  build-windows.yml  tests.yml
.qwen/: settings.json
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  GUIDE.md  README.md
e2e/: global-setup.ts  global-teardown.ts
e2e/fixtures/: server.fixture.ts  users.fixture.ts
e2e/tests/: file-upload.e2e.spec.ts  messaging.e2e.spec.ts  profile.e2e.spec.ts  server-discovery.e2e.spec.ts  settings.e2e.spec.ts
e2e/utils/: dom.ts
scripts/: cleanup-test-db.js  dev-server.js  pre-commit-rust.cjs
server/: .env.example  Cargo.toml  README.md  run-server.sh  run-test-server.sh  start.sh
server/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  websocket.rs
server/src/models/: mod.rs
src/: app-server.js  app.js  cache.js  config.client.json  discovery.js  i18n.js  index.html  notifications.js  server-client.js  settings.js  state.js  storage.js  styles.css  toast.js  types.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  main.rs  network.rs  state.rs  types.rs
src/__tests__/: actions-chat.test.js  app-main.test.js  app.test.js  handlers-chat.test.js  handlers-error.test.js  helpers.test.js  integration.test.js  logic-chat.test.js  renderers-error.test.js  server-client-error.test.js  server-client-real.test.js  server-client.test.js  settings.test.js  setup.js  ui-renderers.test.js  utils-files.test.js
src/chat/: actions.js  handlers.js  pagination.js
src/dialogs/: profile.js  server.js
src/events/: setup.js
src/locales/: en.json  ru.json
src/logic/: chat.js
src/ui/: renderers.js
src/utils/: files.js  helpers.js  messages.js  peers.js
