[package]
name = "xam-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-cors = "0.7"
actix-multipart = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"

[dev-dependencies]
actix-rt = "2"
assert-json-diff = "2"
tokio-test = "0.4"
tempfile = "3"
