[package]
name = "xam-messenger"
version = "1.0.0"
description = "LAN Messenger built with Tauri + Rust"
authors = ["Xam"]
license = "MIT"
repository = "https://github.com/dev-lime/xam"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
mdns-sd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2"
if-addrs = "0.13"
log = "0.4"
env_logger = "0.11"
flume = "0.11"
tokio-util = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
